Changelog for Miosix np embedded OS

- Moved board_settings.h in the config directory to allow out of git tree
  projects to tweak those files without editing files in the Miosix git repo.
- Added miosix/_tools/init_project_out_of_git_tree.pl script to help set up
  out of git tree projects.
- New makefile now supporting out of git tree projects, to help having the
  Miosix git repo as a submodule of another git repo.
- Updated backend_benchmark.cpp to use DevFs instead of the old Disk interface.
- Fixed a bug in the stm32 SDIO drivers that caused the slowest clock speed
  selection, resulting in a serious performance regression when writing to
  an SD card. Bug was added in commit e697ded4325a5a2de12706712abc4a846d733b3e
- Added streamwriter example to show how to write to an SD card at a relatively
  high data rate.
- Added dirlist testcase
- Relaxed file open mode checks in DevFs to allow opening device files with
  fopen()
- Added loop mount example.
- Fixed a bug in umount().
- Reworked logging.h to decrease code size.
- Moving from mallinfo() to _mallinfo_r() in getCurrentFreeHeap() to avoid
  accidentally bringing in iprintf(), which increases code size.
- Added RCC_SYNC() macro to all stm32 BSPs to workaround an errata in the
  stm32f42x requiring additional cycles to enable clock gating. From now on
  it is suggested to add an RCC_SYNC() after every access to the RCC to
  enable clock gating an all stm32 ports.
- Added SDRAM initialization code for stm32f429 board, and SDRAM linker
  scripts. The new default is to put .data/.bss/stack and heap in the SDRAM,
  and to leave the upper 2MB of it for the LCD.
- Cleaned up code completion configuration for Netbeans. Now the IDE
  automatically detects the source files that belong to the project by looking 
  at the debug symbols in the produced elf file. 
- Added memory barrier to saveContext() to prevent a race condition found in
  the new stm32f429 board.